Toggle all actions when a session restore happens

Summary:
Fixes session restore actions for me.

BUG: 406895

Reviewers: ngraham, hindenburg, #konsole

Reviewed By: ngraham

Subscribers: konsole-devel

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D21118